update image text

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </p>
               </div>
               <div class="education-item-2">
-                <p>Press on the image to see the original exam problem</p>
+                <p>Click the image to switch between the original problem and its solution.</p>
                 <img
                   src="/images/problem9.jpg"
                   alt="Problem 9 Completed"
