finish application setion

--- a/index.html
+++ b/index.html
@@ -144,16 +144,31 @@
 
         <!-- END - projects list/description -->
 
-        <!-- projects list/description -->
+        <!-- application list/description -->
         <section class="section" id="application">
           <div class="application-container">
             <h2>Application</h2>
-            <div class="application-item-1">
-              <p></p>
+            <div class="application-grid">
+              <!-- Video -->
+              <div class="application-item-1">
+                <div class="aspect-wrapper">
+                  <video controls>
+                    <source src="videos/application_video.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                  </video>
+                </div>
+              </div>
+
+              <!-- PDF Presentation -->
+              <div class="proj-item-2">
+                <div class="aspect-wrapper">
+                  <iframe src="pdfs/application_pdf.pdf" allowfullscreen></iframe>
+                </div>
+              </div>
             </div>
           </div>
         </section>
-        <!-- END - projects list/description -->
+        <!-- END - application list/description -->
 
         <!-- contact form-->
         <div class="contact-wrapper"></div>
