add reflection sections for application and lesson

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
           <li><a class="nav-links" href="#about">About</a></li>
           <li><a class="nav-links" href="#exam">Exam Reflection</a></li>
           <li><a class="nav-links" href="#lesson">Lesson</a></li>
+          <li><a class="nav-links" href="#lesson-reflection">Lesson Reflection</a></li>
           <li><a class="nav-links" href="#application">Application</a></li>
+          <li><a class="nav-links" href="#application-reflection">Application Reflection</a></li>
           <li><a class="nav-links" href="#resources">Resources</a></li>
         </ul>
       </nav>
@@ -144,6 +146,13 @@
 
         <!-- END - projects list/description -->
 
+        <section class="section" id="lesson-reflection">
+          <div class="proj-container">
+            <h2>Lesson Reflection</h2>
+            <p id="reflection">I chose to teach the topic of derivatives because I wanted to explore how calculus helps us understand the changing world around us. While preparing and delivering this lesson, I realized how important it is to build a solid foundation in the basics—like the power rule and the derivatives of natural logarithm and exponential functions—before moving on to more advanced concepts. Teaching this lesson not only strengthened my own understanding of these rules but also taught me how to break down complex ideas into simple steps that are easier to grasp. This experience showed me how powerful it can be to communicate math concepts clearly and help others feel more confident about them.</p>
+          </div>
+        </section>
+
         <!-- application list/description -->
         <section class="section" id="application">
           <div class="application-container">
@@ -175,6 +184,13 @@
           </div>
         </section>
         <!-- END - application list/description -->
+
+        <section class="section" id="application-reflection">
+          <div class="proj-container">
+            <h2>Application Reflection</h2>
+            <p id="reflection">I chose this applied optimization problem because it was a great opportunity to practice using second partial derivatives and critical point analysis to find a maximum profit in a real-world context. This problem, taken from Chapter 4.3 on optimization, was both challenging and interesting because it combined calculus with business applications. As I worked through the solution, I learned how to set up and solve equations for partial derivatives and how to use the second derivative test to identify the optimal production quantities for both types of bicycles. Going step by step in this video not only reinforced my understanding of the math involved but also showed me how important it is to communicate each step clearly when teaching others. I also had a lot of fun making this video and seeing how everything came together in the end. This experience gave me a deeper appreciation for how optimization can be used to make smarter business decisions.</p>
+          </div>
+        </section>
 
         <!-- contact form-->
         <div class="contact-wrapper"></div>
